--- a/src/Temporary/asd.html
+++ b/src/Temporary/asd.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+<!--    <script src="../../node_modules/read-excel-file/bundle/read-excel-file.min.js"></script>-->
+    <!--    <script src="https://unpkg.com/read-excel-file@4.1.0/bundle/read-excel-file.min.js"></script>-->
 </head>
 <body>
-$END$
+    <input type="file" id="input">
+    <script type="module" src="./ReadExcelFile.js"></script>
+    <!--    <script>-->
+<!--        const input = document.getElementById("input");-->
+<!--        input.addEventListener('change', function () {-->
+<!--            readXlsxFile(input.files[0]).then(data => {-->
+<!--                console.log(data);-->
+<!--            })-->
+<!--        })-->
+<!--    </script>-->
 </body>
 </html>
